2016-09-27	allow_all -> allow_for_startup, and a bit more.

		share/innocent-pear/bbq.h :
		- renamed innocent_pear::impl::allow_all -> innocent_pear::
		  impl::allow_for_startup, to better reflect its true
		  semantics
		- removed innocent_pear::impl::allow_terminal_unsafes

		include/innocent-pear/omg.h ,
		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-02.cc ,
		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc ,
		share/innocent-pear/doge-05.cc ,
		share/innocent-pear/doge-06.cc ,
		share/innocent-pear/doge-07.cc ,
		test/test-kthxbai.cc ,
		test/test-kthxbai-p.cc ,
		test/test-orly.cc ,
		- updated per bbq.h

		share/innocent-pear/moar.cc :
		- tweaked handling of large buffer sizes for calls to
		  KeccakWidth1600_SpongePRG_Feed(...)

2016-09-25	Further split unscrambling.  Fixed x86-64 red zone clobbering.
		Abstracted out pseudorandomness generation.

		share/innocent-pear/doge-i.h :
		- reduced confusion layers
		- added innocent_pear_NEXT

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-02.cc :
		- reduced confusion layers

		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc ,
		share/innocent-pear/doge-05.cc ,
		share/innocent-pear/doge-06.cc ,
		share/innocent-pear/doge-07.cc :
		- split from share/innocent-pear/doge-03.cc
		- reduced confusion layers, but increased the number of
		  parts to unscramble
		- now defines dogecoin_t::l_ with `constexpr', not `const'

		share/innocent-pear/doge-45.cc :
		- tweaked code formatting

		share/innocent-pear/omnomnom.lxx :
		- updated to use moar.h rather than directly calling Keccak
		  routines

		bin/innocent-pear-c++.cc :
		- updated per split of doge-03.cc
		- updated to use moar.h rather than directly calling Keccak
		  routines

		include/innocent-pear/kthxbai.h :
		- reduced default number of confusion layers
		- fixed hi_bit(.) logic

		include/innocent-pear/bbq.h :
		- now defines innocent_pear::impl::ops_flags_t constants with